--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   
 <body>
-    <h1>Interest Calculator</h1>
+    <h1>Interest Calculator Change in Laptop</h1>
     <form>
       <fieldset>
        <legend>Input</legend>
