--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Interest Calculator Change in Desktop</h1>
     <form>
       <fieldset>
-       <legend>Input</legend>
+       <legend>Input v2</legend>
         <p>
           <label> Beginning Balance </label>
           <input id="balance" value = "Enter Value Here" />
