--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			  <p>Calculate and Cut down cost or save your money.</p>
 				
 		<!--CALCULATOR STARTS-->
-			  <fieldset>
+			 <section><fieldset>
 		      <legend>Input</legend>
 		        <br><p>
 					<label> Beginning Balance: </label>
@@ -92,17 +92,19 @@
 					<label>Total Amount:</label>
 					<input id="total" value = "Total" />
 				</br></p>
+				</section> 
 			<!--CALCULATOR ENDS-->
 </div>
       </fieldset>
     </form>
     
 	<!---Here Javascript will generate the bar chart.-->
+	
 	<canvas id="mainChart"></canvas>
 
 	<!--- Here Javascript will generate yearly total amount in the account at the given year. -->
 	<ul id="mainList"></ul>
-	
+	</div.b>
 	<footer>
 				<p>
 					&copy; Copyright IT485 Spring Group 4
