--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	</head>
 	<!--JavaScript STARTS-->
     	<script src="JS/index.js"></script>
+	
+		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
