--- a/contacts.html
+++ b/contacts.html
@@ -18,15 +18,15 @@
 			<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
 		<!--JQuery Mobile ENDS-->
 	
+		<!--Resolution for Desktop, Mobile, Tablet STARTS-->
 		<!-- desktop-->
-			<link href="stylesheet/desktop/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:1000px) and (max-width:1920px"/>
+			<link href="CSS/Res/desktop" rel="stylesheet" type="text/css" media="only screen and (min-width:1000px) and (max-width:1920px"/>
 		<!-- phone -->
-			<link href="stylesheet/phone/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:320px) and (max-width:1920px)"/>
+			<link href="CSS/Res/phone" rel="stylesheet" type="text/css" media="only screen and (min-width:320px) and (max-width:1920px)"/>
 		<!-- tablet -->
-			<link href="stylesheet/tablet/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:750px) and (max-width:1000px)"/>
-		<!-- print -->
-			<link href="stylesheet/print/main.css" rel="stylesheet" type="text/css" media="print"/>
-	
+			<link href="CSS/Res/tablet" rel="stylesheet" type="text/css" media="only screen and (min-width:750px) and (max-width:1000px)"/>
+			<!--Resolution for Desktop, Mobile, Tablet ENDS-->
+			
 		</head>
 		<!--JavaScript STARTS-->
 	    	<script src="JS/index.js"></script>
