--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 	<!--Title-->
      	<title>Compounding Interest Calculator</title>
 	<head>
-	<!--JQuery Mobile STARTS-->
-    	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!--Javascript that styles CSS-->
-		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<!--Javascript that is for Mobile-->
-		<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
-
-	<!--JQuery Mobile ENDS-->
-
-<!-- desktop-->
-	<link href="stylesheet/desktop/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:1000px) and (max-width:1920px"/>
-<!-- phone -->
-	<link href="stylesheet/phone/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:320px) and (max-width:1920px)"/>
-<!-- tablet -->
-	<link href="stylesheet/tablet/main.css" rel="stylesheet" type="text/css" media="only screen and (min-width:750px) and (max-width:1000px)"/>
-<!-- print -->
-	<link href="stylesheet/print/main.css" rel="stylesheet" type="text/css" media="print"/>
-
+	
+		<!--JQuery Mobile STARTS-->
+	    	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!--Javascript that styles CSS-->
+			<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+		<!--Javascript that is for Mobile-->
+			<script src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+		<!--JQuery Mobile ENDS-->
+	
+		<!--Resolution for Desktop, Mobile, Tablet STARTS-->
+		<!-- desktop-->
+			<link href="CSS/Res/desktop" rel="stylesheet" type="text/css" media="only screen and (min-width:1000px) and (max-width:1920px"/>
+		<!-- phone -->
+			<link href="CSS/Res/phone" rel="stylesheet" type="text/css" media="only screen and (min-width:320px) and (max-width:1920px)"/>
+		<!-- tablet -->
+			<link href="CSS/Res/tablet" rel="stylesheet" type="text/css" media="only screen and (min-width:750px) and (max-width:1000px)"/>
+			<!--Resolution for Desktop, Mobile, Tablet ENDS-->
+			
 	</head>
 	<!--JavaScript STARTS-->
     	<script src="JS/index.js"></script>
