Loan Graph done

--- a/loan.html
+++ b/loan.html
@@ -40,15 +40,15 @@
 					<label>Monthly Payment ($):</label>
 					<input id="monthly" value="Total" />
 				</p>
-				<!--CALCULATOR ENDS-->
-
 			</fieldset>
+			<!--CALCULATOR ENDS-->
 		</div>
+		<!--Bottom Text ENDS-->
 
-		<!---Here Javascript will generate the bar chart.-->
+		<!---Here Javascript will generate the bar chart -->
 		<canvas id="mainChart"></canvas>
 
-		<!--- Here Javascript will generate the list. -->
+		<!--- Here Javascript will generate the list -->
 		<ul id="period_list" style="float:left;">
 			<li>Year X</li>
 		</ul>
@@ -72,6 +72,7 @@
 		<ul id="total_interest_list" style="float:left;">
 			<li>Ending balance is XX</li>
 		</ul>
+		<!-- Javascript generated list ENDS-->
 
 	</body>
 </html>
