--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
 		<!--TOP Text ENDS-->	
 			
 		<!--CONTACTS STARTS-->
-			  <fieldset>
+			  <section><fieldset>
 		        <p>
 				<!--Full name in a input text-->
 				<form action="/action_page.php"> Full Name: <input type="text" name="FullName" value=""><br>
@@ -79,7 +79,7 @@
 				</p>
 		<!--CONTACTS ENDS-->
 </div>
-      </fieldset>
+      </section></fieldset>
     </form>
     
 	<!---Here Javascript will generate the bar chart.-->
