--- a/loan.html
+++ b/loan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html lang = "en">
 	<head>
 		<meta charset = "UTF-8" />
@@ -7,7 +7,7 @@
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	 	
 	<!--Title-->
-     	<title>Home Page</title>
+     	<title>Compounding Interest Calculator</title>
 	<head>
 	
 		<!--JQuery Mobile STARTS-->
@@ -41,6 +41,7 @@
 	<!--JavaScript ENDS-->
 	</head>
 
+		<!---CALCULATOR V2 STARTS-->
 		<!--NAV TOP BAR GOING ACCROSS HORIZONTAL STARTS-->
 			<nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
@@ -60,16 +61,70 @@
   </div>
 </nav>
 
-	
-			</div>
-      </fieldset>
-    </form>
+		<!--Bottom Text-->
+		<div class="container">
+			<h3>Loan Monthly Payment Calculator</h3>
+			<p></p>	
+	<body>
+		
 
+			<!--CALCULATOR STARTS-->
+			<section><fieldset>
+				<legend>Input</legend>
+				<br><p>
+					<label> Loan Amount ($): </label>
+					<input id="loan" value="Enter Value Here" />
+				</p><p>
+					<label> Annual Interest Rate (%): </label>
+					<input id="interest" value="Enter Value Here" />
+				</p><p>
+					<label> Term Period for Loan (Year): </label>
+					<input id="year" value="Enter Value Here" />
+				</p><p>
+					<label><button type="button" onclick="calculate_loan()">Calculate</button></label>
+					<label><button type="reset" onclick="Reset()">Clear</button></label>
+				</p><p>
+					<label>Monthly Payment ($):</label>
+					<input id="monthly" value="Total" />
+				</p>
+			</section></fieldset>
+			<!--CALCULATOR ENDS-->
+		</div>
+
+		<!---Here Javascript will generate the bar chart -->
+		<canvas id="mainChart"></canvas>
+
+		<!--- Here Javascript will generate the list -->
+		<ul id="period_list" style="float:left;">
+			<li>Year X</li>
+		</ul>
+
+		<ul id="starting_balance_list" style="float:left;">
+			<li>Year X</li>
+		</ul>
+
+		<ul id="interest_list" style="float:left;">
+			<li>Interest earned this year XX</li>
+		</ul>
+
+		<ul id="principal_list" style="float:left;">
+			<li>Interest earned this year XX</li>
+		</ul>
+
+		<ul id="ending_balance_list" style="float:left;">
+			<li>Ending balance is XX</li>
+		</ul>
+
+		<ul id="total_interest_list" style="float:left;">
+			<li>Ending balance is XX</li>
+		</ul>
+		<!-- Javascript generated list ENDS-->
+
+	</body>
 	<footer>
+		<!--Copyrights-->
 				<p>
 					&copy; Copyright IT485 Spring Group 4
 				</p>
 			</footer>
-
-</body>
 </html>
