--- a/goal.html
+++ b/goal.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html lang = "en">
 	<head>
 		<meta charset = "UTF-8" />
@@ -18,7 +18,7 @@
 	<body>
 		<!--Bottom Text-->
 		<div class="container">
-			<h3>Loan Monthly Payment Calculator</h3>
+			<h3>Saving Calculator</h3>
 			<p>Calculate how much you need to pay each month to finish of the loan.</p>
 
 			<!--CALCULATOR STARTS-->
