Cleaned List from Loan HTML

--- a/loan.html
+++ b/loan.html
@@ -93,7 +93,7 @@
 	<!---Here Javascript will generate the bar chart -->
 	<canvas id="mainChart"></canvas>
 
-	<!--Table Test-->
+	<!--- Here Javascript will generate the table-->
 	<table align="center" id="table">
 		<tr>
 			<td id="header" colspan="6"><h1>Table</h1></td>
@@ -107,32 +107,7 @@
 			<th>Total Interest</th>
 		</tr>
 	</table>
-
-	<!--- Here Javascript will generate the list -->
-	<ul id="period_list" style="float:left;">
-		<li>Year X</li>
-	</ul>
-
-	<ul id="starting_balance_list" style="float:left;">
-		<li>Year X</li>
-	</ul>
-
-	<ul id="interest_list" style="float:left;">
-		<li>Interest earned this year XX</li>
-	</ul>
-
-	<ul id="principal_list" style="float:left;">
-		<li>Interest earned this year XX</li>
-	</ul>
-
-	<ul id="ending_balance_list" style="float:left;">
-		<li>Ending balance is XX</li>
-	</ul>
-
-	<ul id="total_interest_list" style="float:left;">
-		<li>Ending balance is XX</li>
-	</ul>
-	<!-- Javascript generated list ENDS-->
+	<!-- Javascript generated table ENDS-->
 
 </body>
 </html>
