--- a/loan.html
+++ b/loan.html
@@ -22,59 +22,57 @@
 </head>
 
 <body>
-    <!--Bottom Text-->
-    <div class="container" style="width:50%; float: left;">
-        <h3>Loan Monthly Payment Calculator</h3>
-        <p>Calculate how much you need to pay each month to finish of the loan.</p>
+	<!--Bottom Text-->
+	<div class="container">
+		<h3>Loan Monthly Payment Calculator</h3>
+		<p>Calculate how much you need to pay each month to finish of the loan.</p>
 
-        <!--CALCULATOR STARTS-->
-        <fieldset>
-            <legend>Input</legend>
-            <br><p>
-                <label> Loan Amount ($): </label>
-                <input id="loan" value="Enter Value Here" />
-            </p><p>
-                <label> Annual Interest Rate (%): </label>
-                <input id="interest" value="Enter Value Here" />
-            </p><p>
-                <label> Term Period for Loan (Year): </label>
-                <input id="year" value="Enter Value Here" />
-            </p><p>
-                <label><button type="button" onclick="calculate_loan()">Calculate</button></label>
-                <label><button type="reset" onclick="Reset()">Clear</button></label>
-            </p><p>
-                <label>Monthly Payment ($):</label>
-                <input id="monthly" value="Total" />
-            </p>
-        </fieldset>
-        <!--CALCULATOR ENDS-->
-        <button type="button" onlick="testing()">TEST</button>
-    </div>
-    <!--Bottom Text ENDS-->
-    <!---Here Javascript will generate the bar chart -->
-    <div style="width:50%; float: left;">
-        <canvas id="mainChart"></canvas>
-    </div>
+		<!--CALCULATOR STARTS-->
+		<fieldset>
+			<legend>Input</legend>
+			<br><p>
+				<label> Loan Amount ($): </label>
+				<input id="loan" value="Enter Value Here" />
+			</p><p>
+				<label> Annual Interest Rate (%): </label>
+				<input id="interest" value="Enter Value Here" />
+			</p><p>
+				<label> Term Period for Loan (Year): </label>
+				<input id="year" value="Enter Value Here" />
+			</p><p>
+				<label><button type="button" onclick="calculate_loan()">Calculate</button></label>
+				<label><button type="reset" onclick="Reset()">Clear</button></label>
+			</p><p>
+				<label>Monthly Payment ($):</label>
+				<input id="monthly" value="Total" />
+			</p>
+		</fieldset>
+		<!--CALCULATOR ENDS-->
+	</div>
 
-    <!--- Here Javascript will generate the table-->
-    <div>
-        <table align="center" id="table">
-            <thead>
-                <tr>
-                    <th id="header" colspan="6"><h1>Loan Payment Table</h1></th>
-                </tr>
-                <tr>
-                    <td>Month</td>
-                    <td>Starting Balance</td>
-                    <td>Interest</td>
-                    <td>Principal</td>
-                    <td>Ending Balance</td>
-                    <td>Total Interest</td>
-                </tr>
-            </thead>
-                <tbody id="tbody"></tbody>
-        </table>
-    </div>
-        <!-- Javascript generated table ENDS-->
+	<!--Bottom Text ENDS-->
+	<!---Here Javascript will generate the bar chart -->
+		<canvas id="mainChart"></canvas>
+
+	<!--- Here Javascript will generate the table-->
+	<div>
+		<table align="center" id="table">
+			<thead>
+				<tr>
+					<th id="header" colspan="6"><h1>Loan Payment Table</h1></th>
+				</tr>
+				<tr>
+					<td>Month</td>
+					<td>Starting Balance</td>
+					<td>Interest</td>
+					<td>Principal</td>
+					<td>Ending Balance</td>
+					<td>Total Interest</td>
+				</tr>
+			</thead>
+			<tbody id="tbody"></tbody>
+		</table>
+	</div>
+	<!-- Javascript generated table ENDS-->
 </body>
 </html>
