--- a/instant/Project/Home.html
+++ b/instant/Project/Home.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Calculator</title>
+    <title>Calculator Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -69,15 +69,17 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<h1>Calculator Links</h1>
-			
+			<!--Interest Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="Interest.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
 			</div>
+			<!--Loans Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="Loan.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
 			</div>
+			<!--Savings Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="Saving.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+				<a href="file:///C:/Users/William/Documents/GitHub/interest-calculator-it485/instant/Project/Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
 			</div>
 			
 		</div><! --/row -->
