--- a/instant/Project/Savings.html
+++ b/instant/Project/Savings.html
@@ -78,7 +78,7 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Loan</h2>
+				<h2>Savings</h2>
 				</div>
 
 		</div><! --/row -->
