--- a/instant/Project/Home.html
+++ b/instant/Project/Home.html
@@ -31,7 +31,8 @@
 
     <!-- Static navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <!--It created a white oval. container is on-->
+      <div class="">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -51,9 +52,10 @@
       </div>
     </div>
 
-
-	<div id="headerwrap">
-	    <div class="container">
+<!--Home Top Wrap Image and Section-->
+	<div id="homewrap">
+		 <!--It created a white oval. container is on-->
+	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4></h4>
@@ -62,7 +64,7 @@
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/homewrap -->
 	
 	<!--Interest, Loan, Saving Calculator-->
 	<section id="works"></section>
@@ -113,7 +115,7 @@
 	</div><! --/social -->
 
 	<div id="footerwrap">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-4">
 					<p><b>Calculator</b></p>
