--- a/instant/Project/Loan.html
+++ b/instant/Project/Loan.html
@@ -45,7 +45,8 @@
 
       <!-- Static navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+     <!--It created a white oval. container is on-->
+      <div class="">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -66,29 +67,24 @@
     </div>
 
 
-	<div id="aboutwrap">
-	    <div class="container">
+	<div id="loanswrap">
+		 <!--It created a white oval. container is on-->
+	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><! --/loanswrap -->
 	
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Loan</h2>
-				</div>
-
-		</div><! --/row -->
-	</div><! --/container -->
-	
-	<body>
-	<!--Bottom Text-->
-	<div class="container">
+		<!--TOP Text STARTS-->
+	<div class="">
 		<h3>Loan Monthly Payment Calculator</h3>
 		<p>Calculate how much you need to pay each month to finish of the loan.</p>
+		<!--TOP Text ENDS-->	
 
 		<!--CALCULATOR STARTS-->
 		<fieldset>
@@ -109,6 +105,7 @@
 				<label>Monthly Payment ($):</label>
 				<input id="monthly" value="Total" />
 			</p>
+			<label><button type="button" onclick="Calendar()">Download Calendar</button></label>
 		</fieldset>
 		<!--CALCULATOR ENDS-->
 	</div>
@@ -141,7 +138,7 @@
 
 	
 	<div id="social">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-dribbble"></i></a>
@@ -167,7 +164,7 @@
 	</div><! --/social -->
 
 	<div id="footerwrap">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-4">
 					<p><b>Calculator</b></p>
