--- a/instant/Project/Savings.html
+++ b/instant/Project/Savings.html
@@ -45,7 +45,8 @@
 
       <!-- Static navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <!--It created a white oval. container is on-->
+      <div class="">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -65,30 +66,25 @@
       </div>
     </div>
 
-
-	<div id="aboutwrap">
-	    <div class="container">
+	<div id="savingswrap">
+		<!--It created a white oval. container is on-->
+	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><! --/savingswrap -->
 	
+	<!--It created a white oval. container is on-->
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>Savings</h2>
-				</div>
-
-		</div><! --/row -->
-	</div><! --/container -->
-	
-	<body>
-	<!--Bottom Text-->
-	<div class="container">
+	<!--TOP Text STARTS -->
+	<div class="">
 		<h3>Savings Calculator</h3>
 		<p>Saving your money is important</p>
+	<!--TOP Text ENDS-->
 
 		<!--CALCULATOR STARTS-->
 		<fieldset>
@@ -141,7 +137,7 @@
 
 	
 	<div id="social">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-dribbble"></i></a>
@@ -167,7 +163,7 @@
 	</div><! --/social -->
 
 	<div id="footerwrap">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-4">
 					<p><b>Calculator</b></p>
@@ -184,6 +180,7 @@
 		
 		</div>
 	</div><! --/footerwrap -->
+	
 	
 
 
