--- a/instant/Project/Contact.html
+++ b/instant/Project/Contact.html
@@ -31,7 +31,8 @@
 
       <!-- Static navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <!--It created a white oval. container is on-->
+      <div class="">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -52,20 +53,21 @@
     </div>
 
 
-	<div id="aboutwrap">
-	    <div class="container">
+	<div id="contactwrap">
+		 <!--It created a white oval. container is on-->
+	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><! --/contactwrap -->
 	
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<!--TOP Text STARTS-->
-			<div class="container">
+			<div class="">
 			  <h3>Contacts Us</h3>
 			  <p>Contacts us for more information or any problems / concerns.</p>
 		<!--TOP Text ENDS-->	
@@ -92,7 +94,7 @@
     </form>
 	
 	<div id="social">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-dribbble"></i></a>
@@ -118,7 +120,7 @@
 	</div><! --/social -->
 
 	<div id="footerwrap">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-4">
 					<p><b>Calculator</b></p>
