--- a/instant/Project/Interest.html
+++ b/instant/Project/Interest.html
@@ -44,7 +44,8 @@
 
       <!-- Static navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <!--It created a white oval. container is on-->
+      <div class="">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -65,16 +66,18 @@
     </div>
 
 <!--About top wrap image-->
-	<div id="aboutwrap">
-	    <div class="container">
+	<div id="interestwrap">
+		<!--It created a white oval. container is on-->
+	    <div class="">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/aboutwrap -->
+	</div><! --/interestwrap -->
 	
-	<div class="container">
+	<!--It created a white oval. container is on-->
+	<div class="">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>Interest Calculator</h2>
@@ -163,8 +166,9 @@
 	
 	
 	
+	
 	<div id="social">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-dribbble"></i></a>
@@ -190,24 +194,23 @@
 	</div><! --/social -->
 
 	<div id="footerwrap">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>Calculator</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<!--Copyrights-->
+				<p>
+					&copy; Copyright IT485 Spring Group 4
+				</p>
 				</div>
 			
 			</div>
 		
 		</div>
-	</div><! --/footerwrap -->
-	
+	</div><! --/footerwrap -->	
 
 
     <!-- Bootstrap core JavaScript
