--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -81,7 +81,7 @@
 			</div>
 			<!--Savings Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="file:///C:/Users/William/Documents/GitHub/interest-calculator-it485/instant/Project/Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+				<a href="Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
 			</div>
 			
 		</div><! --/row -->
