--- a/Home.html
+++ b/Home.html
@@ -81,7 +81,7 @@
 			</div>
 			<!--Savings Image and Link-->
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="file:///C:/Users/William/Documents/GitHub/interest-calculator-it485/instant/Project/Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+				<a href="Savings.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
 			</div>
 			
 		</div><! --/row -->
@@ -89,7 +89,7 @@
 	
 	<!--Social Media-->
 	<div id="social">
-		<div class="container">
+		<div class="">
 			<div class="row centered">
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-dribbble"></i></a>
