--- a/Savings.html
+++ b/Savings.html
@@ -124,10 +124,10 @@
 
 				<!--- Here Javascript will generate the table-->
 				<div>
-					<table align="center" id="table">
+					<table align="center" id="table" style="display: none;">
 						<thead>
 							<tr>
-								<th id="header" colspan="6"><h1>Loan Payment Table</h1></th>
+								<th id="header" colspan="6"><h1>Compound Interest Table</h1></th>
 							</tr>
 							<tr>
 								<td>Period</td>
