--- a/loan.html
+++ b/loan.html
@@ -116,7 +116,7 @@
 
 	<!--- Here Javascript will generate the table-->
 	<div>
-		<table align="center" id="table">
+		<table align="center" id="table" style="display: none;">
 			<thead>
 				<tr>
 					<th id="header" colspan="6"><h1>Loan Payment Table</h1></th>
